# ShbOGengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  install.txt  main.cpp  notes.txt  run.sh
debugging/: CMakeLists.txt  sDebugging.cpp  sDebugging.hpp
geometry/: CMakeLists.txt  sIcosohedron.cpp  sIcosohedron.hpp  sPyramid.cpp  sPyramid.hpp  sShapes.cpp  sShapes.hpp  shapes.cpp  shapes.h  shapes.hpp
include/: CMakeLists.txt  glad.c  sApp.hpp  sBuffer.hpp  sCamera.hpp  sGui.hpp  sMetaApp.hpp  sShader.hpp  sTexture.hpp  sWindow.hpp
include/geometry/: CMakeLists.txt  sIcosohedron.hpp  sJulia.hpp  sMandelbrot.hpp  sPyramid.hpp  sQuad.hpp  sShapes.hpp
shaders/: fragment_shader.frag  icosohedron_shader.frag  icosohedron_shader.vert  julia_shader.frag  julia_shader.vert  mandelBrot.vert  mandelbrot.frag  mandelbrot.vert  quad.frag  quad.vert  vertex_shader.vert
shb_add/: CMakeLists.txt  shb_add.cpp  shb_add.h
shb_random/: CMakeLists.txt  shb_random.cpp  shb_random.h
src/: CMakeLists.txt  glad.c  hi.cpp  sApp.cpp  sApp.hpp  sBuffer.hpp  sCamera.cpp  sCamera.hpp  sGui.cpp  sGui.hpp  sShader.cpp  sShader.hpp  sTexture.cpp  sTexture.hpp  sWindow.cpp  sWindow.hpp
src/examples/: CMakeLists.txt  default.cpp  mandel.cpp  randomPyramids.cpp
src/geometry/: CMakeLists.txt  sIcosohedron.cpp  sJulia.cpp  sMandelbrot.cpp  sPyramid.cpp  sQuad.cpp  sShapes.cpp
utils/: CMakeLists.txt  sShaders.cpp  sShaders.hpp  sUtils.cpp  sUtils.hpp  shader_utils.cpp
